# Algorytmy

./: Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
algo/sorting_algorithms/: README.md  insertion_sort.py  merge_sort.py
tests/: test_algo.py  test_insertion_sort.py  test_merge_sort.py
